 +Added ability to right-click edit each menu item (rather than Alt-E).
 +Fix part 1 of bug 104, Right-click edit with 0 len text results in blank entries on clip.
 +Fix part 2 of bug 104, crashing with right-click edit blank entries.
 +Changed append_item so it is not de-allocating/reallocating memory, instead just repositions entry in list.
 +Fixed two or more action keys having the same key.

V1.1.6 Thursday, August 1 2013
 +Fixed Bug #99, Broken CLI functionality. Now looks at XDG_SESSION_COOKIE, XDG_SEAT, and DISPLAY, introduced by multi-user fix.
 +Fixed bug where if fifo are not found in client mode, parcellite segfaults.
 +Apply patch for typo in German translation, patch #30.
 +Updated parcellite.pot (./extract_strings.sh).
 +Changed name of history file from hist.test to history (debug escape). To restore the history, Quit Parcellite, then cd to $HOME/.local/share/parcellite:   mv hist.test history
 +Added script to generate parcellite.pot & check in file, and gets run before each release from rel.sh.
 +Updated Brazilian Portuguese translation.
 
V1.1.5 Wednesday, July 17 2013
 +Added ppa script.
 +Updated German Translation from patch by Christoph Wickert.
 +Fixed bug 79, reverse order doesn't work.
 +Added fifo_cmd, and stop_all, run_all commands.
 +Fixed bug 82, Parcellite sometimes eats about twenty last characters from a an entry in history.
 +Fixed bug where item length reverts to 50 if > 75. Now uses DEF_ITEM_LENGTH_MAX.
 +Added Frame creation to add_section.
 +Tentative Fix for bug 81, Cannot run for  multiple users, on multiple X sessions.
 +Fixed bug 83, Ctrl+c/v does not work for blender.
 +Added automake rule to set svn version each time svn version is built.
 +Fixed svnversion to use local copy.
 +Added Clipboard standard usage notes to main.c.
 +Fixed Bug 85, Garbage in clipboard when app is closed.
 +Fixed Bug 86, Parcellite not putting history text in clipboard.
 +Fixed Bug 87,Error converting selection from UTF8_STRING fills X log.