@@ -13,6 +13,7 @@ V1.1.7 Thursday, August 1 2013
  +Fix part 2 of bug 104, crashing with right-click edit blank entries.
  +Changed append_item so it is not de-allocating/reallocating memory, instead just repositions entry in list.
  +Fixed two or more action keys having the same key.
+ +Fix bug 105, failure to build with libappindicator.
 
 V1.1.6 Thursday, August 1 2013
  +Fixed Bug #99, Broken CLI functionality. Now looks at XDG_SESSION_COOKIE, XDG_SEAT, and DISPLAY, introduced by multi-user fix.
